<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <com.amap.api.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/check_traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_check_traffic" />

        <CheckBox
            android:id="@+id/check_satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_check_satellite" />

        <CheckBox
            android:id="@+id/check_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_check_night" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edit_poisearch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_autoedit_position" />

        <EditText
            android:id="@+id/edit_poicity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_edit_city" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_poisearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_poisearch" />

        <Button
            android:id="@+id/btn_nextresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_nextresult" />
    </LinearLayout>

</LinearLayout>